<resources>
    <string name="China_Mobile">China Mobile</string>
    <string name="China_Mobile_HD">China Mobile (HD)</string>
    <string name="China_Telecom">China Telecom</string>
    <string name="China_Unicom">China Unicom</string>
    <string name="abbrev_wday_month_day_no_year">EEEEMMMMd</string>
    <string name="abbrev_wday_month_day_no_year_alarm">EEEMMMd</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="accessibility_accessibility_button">Accessibility</string>
    <string name="accessibility_action_divider_bottom_full">Bottom full screen</string>
    <string name="accessibility_action_divider_left_30">Left 30%</string>
    <string name="accessibility_action_divider_left_50">Left 50%</string>
    <string name="accessibility_action_divider_left_70">Left 70%</string>
    <string name="accessibility_action_divider_left_full">Left full screen</string>
    <string name="accessibility_action_divider_right_full">Right full screen</string>
    <string name="accessibility_action_divider_top_30">Top 30%</string>
    <string name="accessibility_action_divider_top_50">Top 50%</string>
    <string name="accessibility_action_divider_top_70">Top 70%</string>
    <string name="accessibility_action_divider_top_full">Top full screen</string>
    <string name="accessibility_airplane_mode">Airplane mode.</string>
    <string name="accessibility_ambient_display_charging">Charging</string>
    <string name="accessibility_assistant">Quick ball</string>
    <string name="accessibility_back">Back</string>
    <string name="accessibility_battery_details">Open battery details</string>
    <string name="accessibility_battery_full">Battery full.</string>
    <string name="accessibility_battery_level">Battery %d percent.</string>
    <string name="accessibility_battery_level_charging">Battery charging, %d percent.</string>
    <string name="accessibility_battery_one_bar">Battery one bar.</string>
    <string name="accessibility_battery_three_bars">Battery three bars.</string>
    <string name="accessibility_battery_two_bars">Battery two bars.</string>
    <string name="accessibility_bluetooth_connected">Bluetooth connected.</string>
    <string name="accessibility_bluetooth_disconnected">Bluetooth disconnected.</string>
    <string name="accessibility_bluetooth_name">Connected to %s.</string>
    <string name="accessibility_bluetooth_tether">Bluetooth tethering.</string>
    <string name="accessibility_brightness">Display brightness</string>
    <string name="accessibility_brightness_slider">Brightness slider</string>
    <string name="accessibility_camera_button">Camera</string>
    <string name="accessibility_carrier_network_change_mode">Carrier network changing.</string>
    <string name="accessibility_cast_name">Connected to %s.</string>
    <string name="accessibility_casting">@string/quick_settings_casting</string>
    <string name="accessibility_casting_turned_off">Screen casting stopped.</string>
    <string name="accessibility_cell_data">Mobile Data</string>
    <string name="accessibility_cell_data_off">Mobile Data Off</string>
    <string name="accessibility_cell_data_on">Mobile Data On</string>
    <string name="accessibility_clear_all">Clear all notifications.</string>
    <string name="accessibility_compatibility_zoom_button">Compatibility zoom button.</string>
    <string name="accessibility_compatibility_zoom_example">Zoom smaller to larger screen.</string>
    <string name="accessibility_data_connection_1x">1 X</string>
    <string name="accessibility_data_connection_3.5g">3.5G</string>
    <string name="accessibility_data_connection_3g">3G</string>
    <string name="accessibility_data_connection_4g">4G</string>
    <string name="accessibility_data_connection_4g_plus">4G+</string>
    <string name="accessibility_data_connection_cdma">CDMA</string>
    <string name="accessibility_data_connection_edge">Edge</string>
    <string name="accessibility_data_connection_gprs">GPRS</string>
    <string name="accessibility_data_connection_hspa">HSPA</string>
    <string name="accessibility_data_connection_lte">LTE</string>
    <string name="accessibility_data_connection_lte_plus">LTE+</string>
    <string name="accessibility_data_connection_roaming">Roaming</string>
    <string name="accessibility_data_connection_wifi">WLAN</string>
    <string name="accessibility_data_one_bar">Data one bar.</string>
    <string name="accessibility_data_saver_off">Data saver is off</string>
    <string name="accessibility_data_saver_on">Data saver is on</string>
    <string name="accessibility_data_signal_full">Data signal full.</string>
    <string name="accessibility_data_three_bars">Data three bars.</string>
    <string name="accessibility_data_two_bars">Data two bars.</string>
    <string name="accessibility_desc_close">Close</string>
    <string name="accessibility_desc_connected">Connected.</string>
    <string name="accessibility_desc_connecting">Connecting.</string>
    <string name="accessibility_desc_lock_screen">Lock screen.</string>
    <string name="accessibility_desc_notification_icon">%1$s notification: %2$s</string>
    <string name="accessibility_desc_notification_shade">Notification shade.</string>
    <string name="accessibility_desc_off">Off.</string>
    <string name="accessibility_desc_on">On.</string>
    <string name="accessibility_desc_quick_settings">Quick settings.</string>
    <string name="accessibility_desc_quick_settings_edit">Quick settings editor.</string>
    <string name="accessibility_desc_recent_apps">Overview.</string>
    <string name="accessibility_desc_settings">Settings</string>
    <string name="accessibility_desc_work_lock">Work lock screen</string>
    <string name="accessibility_display_daltonizer_preference_subtitle">This feature is experimental and may affect performance.</string>
    <string name="accessibility_display_daltonizer_preference_title">Color correction</string>
    <string name="accessibility_divider">Split-screen divider</string>
    <string name="accessibility_drag_hint_message">Drag items to top of the screen</string>
    <string name="accessibility_enter_lock_wallpaper">Tap to open Wallpaper Carousel</string>
    <string name="accessibility_ethernet_connected">Ethernet connected.</string>
    <string name="accessibility_ethernet_disconnected">Ethernet disconnected.</string>
    <string name="accessibility_gps_acquiring">GPS acquiring.</string>
    <string name="accessibility_gps_enabled">GPS enabled.</string>
    <string name="accessibility_home">Home</string>
    <string name="accessibility_ime_switch_button">Switch input method button.</string>
    <string name="accessibility_key">Custom navigation button</string>
    <string name="accessibility_left_button">shortcut</string>
    <string name="accessibility_location_active">Location requests active</string>
    <string name="accessibility_managed_profile">Work profile</string>
    <string name="accessibility_menu">Menu</string>
    <string name="accessibility_multi_user_switch_inactive">Current user %s</string>
    <string name="accessibility_multi_user_switch_quick_contact">Show profile</string>
    <string name="accessibility_multi_user_switch_switcher">Switch user</string>
    <string name="accessibility_multi_user_switch_switcher_with_current">Switch user, current user %s</string>
    <string name="accessibility_no_battery">No battery.</string>
    <string name="accessibility_no_data">No data.</string>
    <string name="accessibility_no_phone">No phone.</string>
    <string name="accessibility_no_signal">No signal.</string>
    <string name="accessibility_no_sim">No SIM.</string>
    <string name="accessibility_no_sims">No SIM card.</string>
    <string name="accessibility_no_wifi">Disconnected from WLAN.</string>
    <string name="accessibility_no_wimax">No WiMAX.</string>
    <string name="accessibility_not_connected">Not connected.</string>
    <string name="accessibility_notification_dismissed">Notification dismissed.</string>
    <string name="accessibility_notifications_button">Notifications.</string>
    <string name="accessibility_one_bar">One bar.</string>
    <string name="accessibility_overflow_action">See all notifications</string>
    <string name="accessibility_phone_button">Phone</string>
    <string name="accessibility_phone_one_bar">Phone one bar.</string>
    <string name="accessibility_phone_signal_full">Phone signal full.</string>
    <string name="accessibility_phone_three_bars">Phone three bars.</string>
    <string name="accessibility_phone_two_bars">Phone two bars.</string>
    <string name="accessibility_qs_edit_add_tile_label">%1$s. Double tap to add.</string>
    <string name="accessibility_qs_edit_move_tile">Move %1$s</string>
    <string name="accessibility_qs_edit_position_label">Position %1$d. Double tap to select.</string>
    <string name="accessibility_qs_edit_remove_tile">Remove %1$s</string>
    <string name="accessibility_qs_edit_tile_added">%1$s is added to position %2$d</string>
    <string name="accessibility_qs_edit_tile_label">Position %1$d, %2$s. Double tap to edit.</string>
    <string name="accessibility_qs_edit_tile_moved">%1$s moved to position %2$d</string>
    <string name="accessibility_qs_edit_tile_removed">%1$s is removed</string>
    <string name="accessibility_quick_settings_airplane_changed_off">Airplane mode turned off.</string>
    <string name="accessibility_unlock_button">Unlock</string>
    <string name="back">Back</string>
    <string name="delete">Delete</string>
    <string name="emergency_call_string">Emergency</string>
    <string name="input_password_hint_text">Enter password</string>
    <string name="input_pin_code">Enter PIN</string>
    <string name="keyguard_accessibility_pin_area">PIN area</string>
</resources>