<?xml version="1.0" encoding="utf-8"?>
<com.android.systemui.statusbar.phone.KeyguardBottomAreaView android:layout_gravity="bottom" android:id="@id/keyguard_bottom_area" android:layout_width="fill_parent" android:layout_height="wrap_content" android:elevation="5.0dip" android:outlineProvider="none"
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:systemui="http://schemas.android.com/apk/res/com.android.systemui">
    <include android:gravity="center_horizontal" android:layout_gravity="bottom|center" android:orientation="vertical" android:id="@id/keyguard_selector_fade_container" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="70.0dip" layout="@layout/keyguard_emergency_carrier_area" />
    <com.android.systemui.statusbar.KeyguardAffordanceView android:layout_gravity="end|bottom|center" android:id="@id/camera_button" android:layout_width="@dimen/keyguard_affordance_width" android:layout_height="@dimen/keyguard_affordance_height" android:src="@drawable/camera_img" android:scaleType="center" android:contentDescription="@string/accessibility_camera_button" />
    <com.android.systemui.statusbar.KeyguardAffordanceView android:layout_gravity="start|bottom|center" android:id="@id/left_button" android:layout_width="@dimen/keyguard_affordance_width" android:layout_height="@dimen/keyguard_affordance_height" android:src="@drawable/remote_center_img" android:scaleType="center" android:contentDescription="@string/accessibility_phone_button" />
    <com.android.systemui.statusbar.phone.LockIcon android:layout_gravity="bottom|center" android:id="@id/lock_icon" android:visibility="invisible" android:layout_width="@dimen/keyguard_affordance_width" android:layout_height="@dimen/keyguard_affordance_height" android:src="@drawable/ic_lock_24dp" android:scaleType="center" android:contentDescription="@string/accessibility_unlock_button" />
    <LinearLayout android:gravity="center" android:layout_gravity="bottom|center" android:orientation="vertical" android:id="@id/keyguard_indication_area" android:layout_width="fill_parent" android:layout_height="@dimen/keyguard_affordance_height" android:forceHasOverlappingRendering="false">
        <com.android.systemui.statusbar.phone.KeyguardIndicationTextView android:textSize="@dimen/miui_default_lock_screen_unlock_hint_text_size" android:textColor="@color/miui_common_unlock_screen_common_text_color_new" android:gravity="center_horizontal" android:id="@id/keyguard_indication_enterprise_disclosure" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" />
        <com.android.systemui.statusbar.phone.KeyguardIndicationTextView android:textSize="@dimen/miui_default_lock_screen_unlock_hint_text_size" android:textColor="@color/miui_common_unlock_screen_common_text_color_new" android:gravity="center_horizontal" android:id="@id/keyguard_indication_text" android:layout_width="fill_parent" android:layout_height="wrap_content" android:accessibilityLiveRegion="polite" />
    </LinearLayout>
    <include android:layout_gravity="bottom|center" android:id="@id/miui_keyguard_charging_info_id" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="110.0dip" android:layout_centerHorizontal="true" layout="@layout/miui_keyguard_charging_info_layout" />
</com.android.systemui.statusbar.phone.KeyguardBottomAreaView>