<?xml version="1.0" encoding="utf-8"?>
<com.android.keyguard.KeyguardPINView android:orientation="vertical" android:id="@id/keyguard_pin_view" android:layout_width="fill_parent" android:layout_height="fill_parent" android:paddingStart="@dimen/miui_keyguard_pin_view_padding_start_end" android:paddingEnd="@dimen/miui_keyguard_pin_view_padding_start_end" androidprv:layout_maxHeight="@dimen/keyguard_security_max_height"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:androidprv="http://schemas.android.com/apk/res-auto">
    <include android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/miui_keyguard_pin_view_message_area_margin_bottom" layout="@layout/keyguard_message_area" />
    <LinearLayout android:orientation="vertical" android:id="@id/container" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0" android:layoutDirection="ltr">
        <com.android.keyguard.AlphaOptimizedRelativeLayout android:id="@id/row0" android:paddingBottom="16.0dip" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_marginBottom="@dimen/miui_keyguard_pin_view_row0_margin_bottom" android:layout_weight="1.0">
            <com.android.keyguard.PasswordTextViewForPIN android:gravity="center" android:id="@id/pinEntry" android:layout_width="@dimen/keyguard_security_pin_entry_width" android:layout_height="fill_parent" android:hint="@string/input_password_hint_text" android:layout_centerHorizontal="true" android:contentDescription="@string/keyguard_accessibility_pin_area" androidprv:scaledTextSize="28" />
        </com.android.keyguard.AlphaOptimizedRelativeLayout>
        <LinearLayout android:orientation="horizontal" android:id="@id/row1" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_marginBottom="@dimen/miui_keyguard_pin_view_row1_row2_row3_margin_bottom" android:layout_weight="1.0">
            <com.android.keyguard.NumPadKey android:id="@id/key1" android:layout_width="0.0px" android:layout_height="fill_parent" android:layout_weight="1.0" androidprv:digit="1" androidprv:textView="@id/pinEntry" />
            <com.android.keyguard.NumPadKey android:id="@id/key2" android:layout_width="0.0px" android:layout_height="fill_parent" android:layout_weight="1.0" androidprv:digit="2" androidprv:textView="@id/pinEntry" />
            <com.android.keyguard.NumPadKey android:id="@id/key3" android:layout_width="0.0px" android:layout_height="fill_parent" android:layout_weight="1.0" androidprv:digit="3" androidprv:textView="@id/pinEntry" />
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:id="@id/row2" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_marginBottom="@dimen/miui_keyguard_pin_view_row1_row2_row3_margin_bottom" android:layout_weight="1.0">
            <com.android.keyguard.NumPadKey android:id="@id/key4" android:layout_width="0.0px" android:layout_height="fill_parent" android:layout_weight="1.0" androidprv:digit="4" androidprv:textView="@id/pinEntry" />
            <com.android.keyguard.NumPadKey android:id="@id/key5" android:layout_width="0.0px" android:layout_height="fill_parent" android:layout_weight="1.0" androidprv:digit="5" androidprv:textView="@id/pinEntry" />
            <com.android.keyguard.NumPadKey android:id="@id/key6" android:layout_width="0.0px" android:layout_height="fill_parent" android:layout_weight="1.0" androidprv:digit="6" androidprv:textView="@id/pinEntry" />
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:id="@id/row3" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_marginBottom="@dimen/miui_keyguard_pin_view_row1_row2_row3_margin_bottom" android:layout_weight="1.0">
            <com.android.keyguard.NumPadKey android:id="@id/key7" android:layout_width="0.0px" android:layout_height="fill_parent" android:layout_weight="1.0" androidprv:digit="7" androidprv:textView="@id/pinEntry" />
            <com.android.keyguard.NumPadKey android:id="@id/key8" android:layout_width="0.0px" android:layout_height="fill_parent" android:layout_weight="1.0" androidprv:digit="8" androidprv:textView="@id/pinEntry" />
            <com.android.keyguard.NumPadKey android:id="@id/key9" android:layout_width="0.0px" android:layout_height="fill_parent" android:layout_weight="1.0" androidprv:digit="9" androidprv:textView="@id/pinEntry" />
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:id="@id/row4" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_marginBottom="@dimen/miui_keyguard_pin_view_row4_margin_bottom" android:layout_weight="1.0">
            <Space android:layout_width="0.0px" android:layout_height="fill_parent" android:layout_weight="1.0" />
            <com.android.keyguard.NumPadKey android:id="@id/key0" android:layout_width="0.0px" android:layout_height="fill_parent" android:layout_weight="1.0" androidprv:digit="0" androidprv:textView="@id/pinEntry" />
            <Space android:layout_width="0.0px" android:layout_height="fill_parent" android:layout_weight="1.0" />
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:id="@id/row5" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_marginBottom="@dimen/miui_keyguard_pin_view_row5_margin_bottom" android:layout_weight="1.0">
            <com.android.keyguard.EmergencyButton android:textSize="@dimen/miui_keyguard_view_eca_text_size" android:textColor="@color/miui_keyguard_view_eca_text_color" android:id="@id/emergency_call_button" android:background="@null" android:layout_width="0.0px" android:layout_height="fill_parent" android:text="@string/emergency_call_string" android:layout_weight="1.0" android:textAllCaps="@bool/kg_use_all_caps" />
            <Space android:layout_width="0.0px" android:layout_height="fill_parent" android:layout_weight="1.0" />
            <TextView android:textSize="@dimen/miui_keyguard_view_eca_text_size" android:textColor="@color/miui_keyguard_view_eca_text_color" android:gravity="center" android:id="@id/delete_button" android:visibility="gone" android:layout_width="0.0px" android:layout_height="fill_parent" android:text="@string/delete" android:layout_weight="1.0" />
            <TextView android:textSize="@dimen/miui_keyguard_view_eca_text_size" android:textColor="@color/miui_keyguard_view_eca_text_color" android:gravity="center" android:id="@id/keyguard_pin_back_button" android:layout_width="0.0px" android:layout_height="fill_parent" android:text="@string/back" android:layout_weight="1.0" />
        </LinearLayout>
    </LinearLayout>
</com.android.keyguard.KeyguardPINView>